--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -1,6 +1,6 @@
 {% include header.html %}
 
-<div class="container">
+<div class="container bg--blue">
   <section class="center">
     <div class="col-70 margin--m--bottom">
       <h1 class="hero">{{ page.title }}</h1>
