--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,8 +21,6 @@
       </a>
     {% endfor %}
 
-
-
     <ul class="nav_social">
       <li>
         <a href="https://www.facebook.com/{{site.me.facebook}}">
@@ -41,7 +39,7 @@
         </a>
       </li>
       <li>
-        <a href="ttps://github.com/{{site.me.github}}">
+        <a href="https://github.com/{{site.me.github}}">
           <i class="fa fa-github"></i>
         </a>
       </li>
