--- a/assets/scss/objects/_nav.scss
+++ b/assets/scss/objects/_nav.scss
@@ -2,8 +2,8 @@
 -------------------------------------------------------------- */
 .nav--toggle{
   position: fixed;
-  top: 2rem;
-  right: 2rem;
+  top: 1rem;
+  right: 1rem;
   @include font-size(1.7);
   line-height: 3rem;
   height: 3rem;
@@ -28,7 +28,18 @@
       color: darken($color-light,50%);
     }
   }
+
+  @media (min-width : $breakpoint-m) {
+    top: 2rem;
+    right: 2rem;
+    @include font-size(1.7);
+    line-height: 3rem;
+    height: 3rem;
+    width: 3rem;
+  }
 }
+
+
 nav.main_nav{
   font-family: $font-family-primary;
   position: fixed;
