--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -2,7 +2,7 @@
 -------------------------------------------------------------- */
 h1,.h1{
   font-family: $font-family-primary;
-  @include font-size($size-h1-small);
+  @include font-size(1.6);
   line-height: 1.3em;
   padding: 0 0;
   margin: 1.5rem 0;
@@ -12,7 +12,7 @@ h1,.h1{
 }
 h2,.h2{
   font-family: $font-family-primary;
-  @include font-size($size-h1-small);
+  @include font-size(1.6);
   line-height: 1.3em;
   padding: 0 0;
   margin: 2.3rem 0 1.3rem 0;
@@ -22,7 +22,7 @@ h2,.h2{
 }
 h3,.h3{
   font-family: $font-family-primary;
-  @include font-size($size-h3);
+  @include font-size(1.2);
   line-height: 1.3em;
   padding: 0 0;
   margin: 2.4rem 0 1.3rem 0;
@@ -32,7 +32,7 @@ h3,.h3{
 }
 h4,.h4{
   font-family: $font-family-primary;
-  @include font-size($size-h4);
+  @include font-size(1.1);
   line-height: 1.3em;
   padding: 0 0;
   margin: 2.3rem 0 1.2rem 0;
@@ -42,7 +42,7 @@ h4,.h4{
 }
 h5,.h5{
   font-family: $font-family-primary;
-  @include font-size($size-h5);
+  @include font-size(1);
   line-height: 1.3em;
   padding: 0 0;
   margin: 2.3rem 0 1.2rem 0;
@@ -52,7 +52,7 @@ h5,.h5{
 }
 h6,.h6{
   font-family: $font-family-primary;
-  @include font-size($size-h6);
+  @include font-size(1);
   line-height: 1.3em;
   padding: 0 0;
   margin: 2.3rem 0 1.2rem 0;
@@ -69,7 +69,7 @@ p,.p{
   margin: 1.2rem 0;
 }
 .hero{
-  @include font-size($size-hero-small);
+  @include font-size(3);
   line-height: 1.3em;
   margin-top: 4rem;
 }
