--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -6,7 +6,7 @@ h1,.h1{
   line-height: 1.3em;
   padding: 0 0;
   margin: 1.5rem 0;
-  font-weight: bold;
+  font-weight: 300;
   color: $color-blue;
   text-align: center;
 }
@@ -16,7 +16,7 @@ h2,.h2{
   line-height: 1.3em;
   padding: 0 0;
   margin: 2.3rem 0 1.3rem 0;
-  font-weight: bold;
+  font-weight: 300;
   color: lighten($color-blue,10%);
   text-align: center;
 }
@@ -26,7 +26,7 @@ h3,.h3{
   line-height: 1.3em;
   padding: 0 0;
   margin: 2.4rem 0 1.3rem 0;
-  font-weight: bold;
+  font-weight: 400;
   color: lighten($color-blue,15%);
   text-align: center;
 }
@@ -36,7 +36,7 @@ h4,.h4{
   line-height: 1.3em;
   padding: 0 0;
   margin: 2.3rem 0 1.2rem 0;
-  font-weight: bold;
+  font-weight: 500;
   color: darken($color-blue,5%);
   text-align: center;
 }
@@ -46,7 +46,7 @@ h5,.h5{
   line-height: 1.3em;
   padding: 0 0;
   margin: 2.3rem 0 1.2rem 0;
-  font-weight: bold;
+  font-weight: 600;
   color: darken($color-blue,10%);
   text-align: center;
 }
@@ -56,7 +56,7 @@ h6,.h6{
   line-height: 1.3em;
   padding: 0 0;
   margin: 2.3rem 0 1.2rem 0;
-  font-weight: bold;
+  font-weight: 700;
   color: darken($color-blue,15%);
   text-align: center;
 }
@@ -75,6 +75,7 @@ p,.p{
   @include font-size(3);
   line-height: 1.3em;
   margin-top: 4rem;
+  font-weight: 300;
 }
 .subheader{
   margin-top: -0.5rem;
