--- a/assets/scss/objects/_content.scss
+++ b/assets/scss/objects/_content.scss
@@ -37,7 +37,7 @@
     //color: $color-blue;
     @include font-size($size-h3);
     margin: 1rem 0 1rem 0;
-    font-weight: bold;
+    font-weight: 500;
     text-align: left;
   }
   .excerpt{
