--- a/_includes/nextblogpost.html
+++ b/_includes/nextblogpost.html
@@ -1,15 +1,14 @@
 <div class="container page-navigation bg--blue">
   <section class="center">
     <div class="col-75">
-      {% if page.next.url %}
-        <h6><i class="fa fa-arrow-circle-right"></i> Read next Post</h6>
-        <p class="h3 no-margin"><a href="{{page.next.url}}" title="Next Post:{{page.next.title}}">{{page.next.title}}</a></p>
-        <p>{{page.next.excerpt}}</p>
-      {% else %}
-        {% if page.previous.url %}
-          <h6><i class="fa fa-arrow-circle-right"></i> Read previous Post</h6>
+      <h6><i class="fa fa-arrow-circle-right"></i> Read this next</h6>
+      {% if page.previous.url %}
           <p class="h3 no-margin"><a href="{{page.previous.url}}" title="Previous Post: {{page.previous.title}}">{{page.previous.title}}</a></p>
           <p>{{page.previous.excerpt}}</p>
+      {% else %}
+        {% if page.next.url %}
+        <p class="h3 no-margin"><a href="{{page.next.url}}" title="Next Post:{{page.next.title}}">{{page.next.title}}</a></p>
+        <p>{{page.next.excerpt}}</p>
         {% endif %}
       {% endif %}
     </div>
