--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -43,19 +43,5 @@
 {{content}}
 
 
-<footer class="container">
-  <section>
-    <div class="col-75">
-      {% include social.html %}
-    </div>
-  </section>
-</footer>
-
-<div class="container colophon">
-  <section>
-    <div class="col-75">
-      {% include colophon.html %}
-    </div>
-  </section>
-</div>
+{% include social_footer.html %}
 {% include footer.html %}
