changed overall style

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
     <div class="container colophon">
       <section>
         <div class="col-75">
-          <p>&copy; 2010-2013 <a href="mailto:{{site.me.email}}">Volker Otto</a> – Made with <a href="http://jekyllrb.com/">jekyll</a> – Hosted on <a href="http://pages.github.com/">github</a> – <a href="/impressum">Impressum</a> – <a href="#">Top</a></p>
+          <p>&copy; 2010-2013 <a href="mailto:{{site.me.email}}">Volker Otto</a> – Made with <a href="http://jekyllrb.com/">jekyll</a> – Hosted on <a href="http://pages.github.com/">github</a> – <a href="/impressum">Impressum</a> – <a href="/random">Random</a> – <a href="#">Top</a></p>
         </div>
       </section>
     </div>
