--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,12 +1,14 @@
 {% include header.html %}
 
-<div class="container {% if page.color %}bg--{{ page.color }}{% else %}bg--blue{% endif %}">
+<div class="container {% if page.color %}bg--{{ page.color }}{% else %}bg--blue{% endif %} {% if page.cover-class %}{{ page.cover-class }}{% endif%}" {% if page.cover %}style="background-image:url(/assets/img/cover/{{ page.cover }});"{% endif %}>
+  <div class="container--overlay"></div>
   <section class="center">
     <div class="col-70">
       <h1 class="hero">{{ page.title }}</h1>
       <p class="subheader text-align--center">
         {{ page.date | date_to_string }}
         {% if page.tags %}
+          •
           {% for tag in page.tags %}
             <a href="{{ site.url }}/{{ tag }}">{{ tag }}</a>
           {% endfor %}
@@ -15,7 +17,8 @@
     </div>
     {% if page.excerpt %}
       <div class="col-70 margin--m--bottom">
-        <p class="h4 subheader lead">{{ page.excerpt }}</p>
+        <hr>
+        <p class="subheader lead">{{ page.excerpt }}</p>
       </div>
     {% endif %}
   </section>
