--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -1,10 +1,11 @@
 {% include header.html %}
 
-<div class="container bg--blue">
+<div class="container bg--blue {% if page.cover-class %}{{ page.cover-class }}{% endif%}" {% if page.cover %}style="background-image:url(/assets/img/cover/{{ page.cover }});"{% endif %}>
+  <div class="container--overlay"></div>
   <section class="center">
     <div class="col-70 margin--m--bottom">
       <h1 class="hero">{{ page.title }}</h1>
-      <p class="h4 lead subheader">{{ page.lead }}</p>
+      <p class="lead subheader">{{ page.lead }}</p>
     </div>
   </section>
 </div>
