--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -1,7 +1,7 @@
 /* Typography
 -------------------------------------------------------------- */
 h1,.h1{
-  font-family: $font-family-primary;
+  font-family: $font-family-serif;
   @include font-size(1.6);
   line-height: 1.3em;
   padding: 0 0;
@@ -11,27 +11,27 @@ h1,.h1{
   text-align: center;
 }
 h2,.h2{
-  font-family: $font-family-primary;
+  font-family: $font-family-serif;
   @include font-size(1.6);
   line-height: 1.3em;
   padding: 0 0;
   margin: 2.3rem 0 1.3rem 0;
   font-weight: 300;
-  color: lighten($color-blue,10%);
+  color: lighten($color-blue,5%);
   text-align: center;
 }
 h3,.h3{
-  font-family: $font-family-primary;
+  font-family: $font-family-serif;
   @include font-size(1.2);
   line-height: 1.3em;
   padding: 0 0;
   margin: 2.4rem 0 1.3rem 0;
-  font-weight: 500;
-  color: lighten($color-blue,15%);
+  font-weight: 300;
+  color: lighten($color-blue,10%);
   text-align: center;
 }
 h4,.h4{
-  font-family: $font-family-primary;
+  font-family: $font-family-serif;
   @include font-size(1.1);
   line-height: 1.3em;
   padding: 0 0;
@@ -63,7 +63,7 @@ h6,.h6{
 
 p,.p{
   @include font-size($size-p);
-  font-family: $font-family-serif;
+  font-family: $font-family-primary;
   font-weight: normal;
   font-style: normal;
   line-height: 1.5em;
@@ -74,23 +74,36 @@ p,.p{
 .hero{
   @include font-size(3);
   line-height: 1.3em;
+  letter-spacing: .05em;
   margin-top: 4rem;
-  font-weight: 300;
+  font-weight: lighter;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
 }
 .subheader{
-  margin-top: -0.5rem;
+  margin-top: -0.5rem !important;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
 }
 .no-margin{
-  margin: 0 0;
+  margin: 0 0 !important;
 }
 .lead{
-  font-weight: normal;
+  // font-family: $font-family-serif;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
+  text-align: center;
 }
 .split{
   margin-bottom: 0.5rem;
 }
 .split-partner{
   margin-top: 0.5rem;
+}
+hr{
+  border: none;
+  display: block;
+  margin: 1rem auto 2rem;
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  background: none;
+  width: 50%;
 }
 
 @media (min-width : $breakpoint-m) {
@@ -107,28 +120,24 @@ p,.p{
     font-weight: 300;
   }
   h3,.h3{
-    font-family: $font-family-primary;
     @include font-size($size-h3);
     line-height: 1.3em;
     margin: 2.4rem 0 1.3rem 0;
-    font-weight: 400;
+    font-weight: 300;
   }
   h4,.h4{
-    font-family: $font-family-primary;
     @include font-size($size-h4);
     line-height: 1.3em;
     margin: 2.3rem 0 1.2rem 0;
     font-weight: 500;
   }
   h5,.h5{
-    font-family: $font-family-primary;
     @include font-size($size-h5);
     line-height: 1.3em;
     margin: 2.3rem 0 1.2rem 0;
     font-weight: 600;
   }
   h6,.h6{
-    font-family: $font-family-primary;
     @include font-size($size-h6);
     line-height: 1.3em;
     margin: 2.3rem 0 1.2rem 0;
@@ -180,16 +189,19 @@ blockquote{
 }
 /* Code
 -------------------------------------------------------------- */
-pre,code{
+code{
   font-family: consolas,monospace,x;
   color: $color-blue;
+  @include font-size($size-milli);
 }
 pre{
+  font-family: consolas,monospace,x;
   overflow-x: auto;
+  @include font-size($size-milli);
   padding: 1rem;
   border: 1px solid darken($color-light,5%);
   border-left-width: 5px;
-  background-color: $color-light;
+  background-color: #fff;
   white-space: pre;
 }
 /* Lists
@@ -197,7 +209,7 @@ pre{
 ul,ol{
   li{
     @include font-size($size-p);
-    font-family: $font-family-serif;
+    font-family: $font-family-primary;
     line-height: 1.5em;
   }
 }
