--- a/assets/scss/objects/_layout.scss
+++ b/assets/scss/objects/_layout.scss
@@ -32,6 +32,8 @@
 }
 .container{
   width: 100%;
+  z-index: 20;
+  position: relative;
   text-align: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -42,5 +44,24 @@
   }
   &.container-image--bottom{
     background-position: bottom center;
+  }
+
+  .container--overlay{
+    display: block;
+    position: absolute;
+    z-index: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(saturate($color-blue,90%), 0.6);
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(20%, rgba(68, 68, 68, 0.3)), color-stop(100%, rgba(0, 0, 0, 0.6)));
+    background-image: -webkit-linear-gradient(-410deg, rgba(68, 68, 68, 0.3) 20%, rgba(0, 0, 0, 0.5));
+    background-image: linear-gradient(140deg,rgba(68, 68, 68, 0.3) 20%, rgba(0, 0, 0, 0.5));
+  }
+
+  section{
+    z-index: 10;
+    position: relative;
   }
 }
