--- a/assets/scss/base/_basics.scss
+++ b/assets/scss/base/_basics.scss
@@ -15,9 +15,13 @@ html {
   font-size: 100%;
   overflow-y: scroll;
   min-height: 100%;
-  text-rendering: optimizeLegibility;   // Check if compatible
-  -webkit-font-smoothing: antialiased;  // Check if compatible
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
+  font-feature-settings: "kern";
+  -webkit-font-feature-settings: "kern";
+  -moz-font-feature-settings: "kern";
+  -moz-font-feature-settings: "kern=1";
 }
 
 @media (min-width : $breakpoint-m) {
