--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -1,5 +1,12 @@
 /* Typography
 -------------------------------------------------------------- */
+// Set kerning - http://blog.typekit.com/2014/02/05/kerning-on-the-web/
+p,.p,h1,.h1,h2,.h2,h3,.h3,h4,.h4,h5,.h5,h6,.h6,blockquote,li{
+  font-feature-settings: "kern";
+  -webkit-font-feature-settings: "kern";
+  -moz-font-feature-settings: "kern";
+  -moz-font-feature-settings: "kern=1";
+}
 h1,.h1{
   font-family: $font-family-serif;
   @include font-size(1.6);
