--- a/_includes/social_footer.html
+++ b/_includes/social_footer.html
@@ -1,5 +1,5 @@
-<footer class="container">
-  <section>
+<div class="outer">
+  <footer class="container">
     <div class="col-75">
       <p>
         Find me on <a href="https://plus.google.com/{{site.me.googleplus}}/posts">Google+</a>,
@@ -11,5 +11,5 @@
         <a href="https://pinboard.in/u:{{site.me.pinboard}}">pinboard</a>.
         </p>
     </div>
-  </section>
-</footer>
+  </footer>
+</div>
