--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
-    <div class="container colophon">
-      <section>
+    <div class="outer colophon">
+      <aside class="container">
         <div class="col-75">
           <p>
             &copy; 2009-2014 <a href="mailto:{{site.me.email}}">Volker Otto</a> –
@@ -11,7 +11,7 @@
             </small>
           </p>
         </div>
-      </section>
+      </aside>
     </div>
   </div><!-- .layout -->
 
