--- a/_includes/nextblogpost.html
+++ b/_includes/nextblogpost.html
@@ -1,12 +1,12 @@
-<div class="container page-navigation bg--blue {% if page.previous.cover-class %}{{ page.previous.cover-class }}{% else if page.next.cover-class %}{{ page.next.cover-class }}{% endif %}"
+<div class="outer page-navigation bg--blue {% if page.previous.cover-class %}{{ page.previous.cover-class }}{% else if page.next.cover-class %}{{ page.next.cover-class }}{% endif %}"
 {% if page.previous.url %}
   {% if page.previous.cover %} style="background-image:url(/assets/img/cover/{{ page.previous.cover }});"{% endif %}
 {% else if page.next.url %}
   {% if page.next.cover %} style="background-image:url(/assets/img/cover/{{ page.next.cover }});"{% endif %}
 {% endif %}
 >
-  <div class="container--overlay"></div>
-  <section class="center">
+  <div class="outer--overlay"></div>
+  <article class="container">
     <div class="col-75 margin--m">
       <h6>Read this next</h6>
       {% if page.previous.url %}
@@ -17,5 +17,5 @@
         <p class="text-align--center">{{page.next.excerpt}}</p>
       {% endif %}
     </div>
-  </section>
+  </article>
 </div>
