--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -1,17 +1,17 @@
 {% include header.html %}
 
-<div class="container bg--blue {% if page.cover-class %}{{ page.cover-class }}{% endif%}" {% if page.cover %}style="background-image:url(/assets/img/cover/{{ page.cover }});"{% endif %}>
-  <div class="container--overlay"></div>
-  <section class="center">
+<div class="outer bg--blue {% if page.cover-class %}{{ page.cover-class }}{% endif%}" {% if page.cover %}style="background-image:url(/assets/img/cover/{{ page.cover }});"{% endif %}>
+  <div class="outer--overlay"></div>
+  <div class="container">
     <div class="col-70 margin--m--bottom">
       <h1 class="hero">{{ page.title }}</h1>
       <p class="lead subheader">{{ page.lead }}</p>
     </div>
-  </section>
+  </div>
 </div>
 
-<div class="container">
-  <section class="center">
+<div class="outer">
+  <div class="container">
     <div class="col-75">
       {% for post in site.posts %}
         {% for tag in post.tags %}
@@ -38,7 +38,7 @@
         {% endfor %}
       {% endfor %}
     </div>
-  </section>
+  </div>
 </div>
 
 {{content}}
