--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,8 +15,12 @@
     </div>
   </div><!-- .layout -->
 
-  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-  <script src="{{ site.url }}/assets/js/main.js"></script>
+
+  <script src="//ajax.aspnetcdn.com/ajax/jquery/jquery-1.11.0.min.js"></script>
+  <script>window.jQuery || document.write('<script src="{{ site.url }}/assets/js/vendor/jquery-1.11.0.min.js">\x3C/script>')</script>
+
+  <script src="{{ site.url }}/assets/js/main.min.js"></script>
+
   <!-- Google Analytics -->
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
