--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,9 @@
-<!DOCTYPE html>
-<!--[if lte IE 8]><html class="ie"><![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"><!--<![endif]-->
+<!doctype html>
+<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if IE 7]><html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
+<!--[if IE 8]><html class="no-js lt-ie9" lang="en"> <![endif]-->
+<!--[if IE 9 ]><html class="ie9 no-js"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
@@ -26,9 +29,12 @@
 
   <link rel="stylesheet" href="{{ site.url }}/assets/css/main.min.css">
 
-  <meta name="apple-mobile-web-app-title" content="{{ page.title }} | {{ site.name }}">
+  <meta name="apple-mobile-web-app-title" content="{{ site.name }}">
 
-<!--[if lt IE 9]><script src="{{ site.url }}/assets/js/html5shiv.js"></script><![endif]-->
+  <!--[if lt IE 9]>
+  <script src="{{ site.url }}/assets/js/vendor/html5shiv.js"></script>
+  <![endif]-->
+
 </head>
 
 <body class="animated fadeIn">
