some text changes

--- a/_includes/social_footer.html
+++ b/_includes/social_footer.html
@@ -2,13 +2,11 @@
   <footer class="container">
     <div class="col-75">
       <p>
-        Find me on <a href="https://plus.google.com/{{site.me.googleplus}}/posts">Google+</a>,
+        I'm a Web Architect from Hamburg, Germany. You can find me on <a href="https://plus.google.com/{{site.me.googleplus}}/posts">Google+</a>,
         <a href="https://www.facebook.com/{{site.me.facebook}}">Facebook</a>,
         <a href="https://twitter.com/{{site.me.twitter}}">Twitter</a> or
         <a href="http://linkedin.com/profile/view?id={{site.me.linkedin}}">LinkedIn</a>. View code and projects on
-        <a href="https://github.com/{{site.me.github}}">github</a>. Maybe draft me on
-        <a href="http://dribbble.com/{{site.me.dribbble}}">dribbble</a>? Stuff I saved on the web to
-        <a href="https://pinboard.in/u:{{site.me.pinboard}}">pinboard</a>.
+        <a href="https://github.com/{{site.me.github}}">github</a>. Need help on a project?. You can <a href="mailto:{{site.me.email}}">hire me!</a>
         </p>
     </div>
   </footer>
