--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,10 +5,8 @@
             &copy; 2009-2014 <a href="mailto:{{site.me.email}}">Volker Otto</a> –
             Made with <a href="http://jekyllrb.com/">jekyll</a> on <a href="http://pages.github.com/">github</a> –
             <a href="/impressum">Impressum</a> -
-            <small>
-              <a href="/random"><i class="fa fa-random"></i></a>
-              <a href="#"><i class="fa fa-arrow-up"></i></a>
-            </small>
+            <a href="/random">Random</a> -
+            <a href="#">Top</a>
           </p>
         </div>
       </aside>
