--- a/assets/scss/objects/_footer.scss
+++ b/assets/scss/objects/_footer.scss
@@ -2,7 +2,7 @@
 -------------------------------------------------------------- */
 footer.container {
   color: lighten($color-dark,30%);
-  padding-top: 3rem;
+  padding-top: 2rem;
   padding-bottom: 2rem;
 
   p {
@@ -24,7 +24,11 @@ footer.container {
     display: inline;
     font-family: $font-family-primary;
     line-height: 1.2rem;
-    @include font-size($size-micro);
+    @include font-size($size-small);
+
+    @media (min-width : $breakpoint-m) {
+      @include font-size($size-micro);
+    }
   }
 
   a{
