--- a/assets/scss/ext/_grid.scss
+++ b/assets/scss/ext/_grid.scss
@@ -169,6 +169,7 @@ figure.container{
 
     width: 100%;
     height: 12.5rem;
+    padding-bottom: 1rem;
     clear: both;
     position: relative;
 
