--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,6 +35,21 @@
   <script src="{{ site.url }}/assets/js/vendor/html5shiv.js"></script>
   <![endif]-->
 
+  <!--
+  Hey fellow devs,
+  have a nice day!
+
+  - Volker Otto
+
+                          oooo  oooo                                              .       .
+                        `888  `888                                            .o8     .o8
+  oooo    ooo  .ooooo.   888   888  oooo   .ooooo.  oooo d8b       .ooooo.  .o888oo .o888oo  .ooooo.
+   `88.  .8'  d88' `88b  888   888 .8P'   d88' `88b `888""8P      d88' `88b   888     888   d88' `88b
+    `88..8'   888   888  888   888888.    888ooo888  888          888   888   888     888   888   888
+     `888'    888   888  888   888 `88b.  888    .o  888          888   888   888 .   888 . 888   888
+      `8'     `Y8bod8P' o888o o888o o888o `Y8bod8P' d888b         `Y8bod8P'   "888"   "888" `Y8bod8P'
+  -->
+
 </head>
 
 <body class="animated fadeIn">
