--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,7 +11,7 @@
     </ul>
 
     <p class="title">Hire me</p>
-    <p><a href="mailto:{{ site.me.email }}">Currently available for hire.</a></p>
+    <p><a href="mailto:{{ site.me.email }}">Available for hire.</a></p>
 
     <p class="title">Recent Posts</p>
     {% for post in site.posts limit:2 %}
