--- a/assets/scss/ext/_grid.scss
+++ b/assets/scss/ext/_grid.scss
@@ -11,7 +11,8 @@
   z-index: 10;
   position: relative;
   margin: 0 auto;
-  padding: 0 1rem;
+  padding-right: 1rem;
+  padding-left: 1rem;
   font-size: 0; // get rid of whitespaces between inline-blocks
   width: 100%;
   max-width: $grid-max-width;
