added ARIA roles

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
     <div class="outer colophon">
-      <aside class="container">
+      <aside class="container" role="complementary">
         <div class="col-75">
           <p>
             &copy; 2009-2014 <a href="mailto:{{site.me.email}}">Volker Otto</a> –
