--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<nav class="main_nav">
+<nav class="main_nav" role="navigation">
   <div class="nav--close"><i class="fa fa-times"></i></div>
   <div class="inner">
 
