--- a/_includes/social_footer.html
+++ b/_includes/social_footer.html
@@ -1,5 +1,5 @@
 <div class="outer">
-  <footer class="container">
+  <footer class="container" role="contentinfo">
     <div class="col-75">
       <p>
         I'm a Web Architect from Hamburg, Germany. You can find me on <a href="https://plus.google.com/{{site.me.googleplus}}/posts">Google+</a>,
