--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,6 @@
 {% include header.html %}
 
-<article itemscope itemtype="http://schema.org/BlogPosting">
+<article itemscope itemtype="http://schema.org/BlogPosting" role="main">
   <div class="outer {% if page.cover-class %}{{ page.cover-class }}{% endif%} {% if page.color %}bg--{{ page.color }}{% else %}bg--blue{% endif %}" {% if page.cover %}style="background-image:url(/assets/img/cover/{{ page.cover }});"{% endif %}>
     <div class="outer--overlay {% if page.color %}outer--overlay_color--{{ page.color }}{% endif %}"></div>
     <section class="container">
