fixed the footer small color

--- a/_includes/social_footer_small.html
+++ b/_includes/social_footer_small.html
@@ -1,4 +1,4 @@
-<footer class="container" role="contentinfo">
+<footer class="container small" role="contentinfo">
   <div class="col-75">
     <hr>
     <p>
