--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@
 <article itemscope itemtype="http://schema.org/BlogPosting" role="main">
   <div class="outer {% if page.cover-class %}{{ page.cover-class }}{% endif%} {% if page.color %}bg--{{ page.color }}{% else %}bg--blue{% endif %}" {% if page.cover %}style="background-image:url(/assets/img/cover/{{ page.cover }});"{% endif %}>
     <div class="outer--overlay {% if page.color %}outer--overlay_color--{{ page.color }}{% endif %}"></div>
-    <section class="container">
+    <section class="container animated fadeInDown">
       <div class="col-70">
         <h1 class="hero" itemprop="name headline">{{ page.title }}</h1>
         <p class="subheader text-align--center">
