--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -3,7 +3,7 @@
 <div class="outer bg--blue {% if page.cover-class %}{{ page.cover-class }}{% endif%}" {% if page.cover %}style="background-image:url(/assets/img/cover/{{ page.cover }});"{% endif %}>
   <div class="outer--overlay"></div>
   <div class="container">
-    <div class="col-70 margin--m--bottom">
+    <div class="col-70 margin--m--bottom animated fadeInDown">
       <h1 class="hero">{{ page.title }}</h1>
       <p class="lead subheader">{{ page.lead }}</p>
     </div>
