--- a/_includes/social_footer_small.html
+++ b/_includes/social_footer_small.html
@@ -6,7 +6,8 @@
       <a href="https://www.facebook.com/{{site.me.facebook}}">Facebook</a>,
       <a href="https://twitter.com/{{site.me.twitter}}">Twitter</a> or
       <a href="http://linkedin.com/profile/view?id={{site.me.linkedin}}">LinkedIn</a>. View code and projects on
-      <a href="https://github.com/{{site.me.github}}">github</a>. Need help on a project? You can <a href="mailto:{{site.me.email}}">hire me!</a>
+      <a href="https://github.com/{{site.me.github}}">github</a>.
+      <br><br>Need help on a project? I am available for you to <a href="mailto:{{site.me.email}}">hire me!</a>
       </p>
   </div>
 </footer>
