--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -22,17 +22,17 @@
     {% endfor %}
 
     <ul class="nav_social">
-      <li>
+      <!-- <li>
         <a href="https://www.facebook.com/{{site.me.facebook}}">
           <i class="fa fa-facebook"></i>
         </a>
-      </li>
-      <!-- // Who uses Google+ anyway?
+      </li> -->
+      <!-- // Who uses Google+ anyway? -->
       <li>
-        <a href="https://plus.google.com/{{site.me.googleplus}}/posts">
+        <a href="https://plus.google.com/{{site.me.googleplus}}" rel="author">
           <i class="fa fa-google-plus"></i>
         </a>
-      </li> -->
+      </li>
       <li>
         <a href="https://twitter.com/{{site.me.twitter}}">
           <i class="fa fa-twitter"></i>
