--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -25,7 +25,8 @@ h2,.h2{
   margin: 2.3rem 0 1.3rem 0;
   font-weight: 300;
   color: lighten($color-blue,5%);
-  text-align: center;
+  text-align: left;
+  border-bottom: 3px solid $color-blue;
 }
 h3,.h3{
   font-family: $font-family-serif;
@@ -35,7 +36,7 @@ h3,.h3{
   margin: 2.4rem 0 1.3rem 0;
   font-weight: 300;
   color: lighten($color-blue,10%);
-  text-align: center;
+  text-align: left;
 }
 h4,.h4{
   font-family: $font-family-serif;
@@ -45,7 +46,7 @@ h4,.h4{
   margin: 2.3rem 0 1.2rem 0;
   font-weight: 500;
   color: darken($color-blue,5%);
-  text-align: center;
+  text-align: left;
 }
 h5,.h5{
   font-family: $font-family-primary;
@@ -55,7 +56,7 @@ h5,.h5{
   margin: 2.3rem 0 1.2rem 0;
   font-weight: 700;
   color: darken($color-blue,10%);
-  text-align: center;
+  text-align: left;
 }
 h6,.h6{
   font-family: $font-family-primary;
@@ -65,7 +66,7 @@ h6,.h6{
   margin: 2.3rem 0 1.2rem 0;
   font-weight: 700;
   color: darken($color-blue,15%);
-  text-align: center;
+  text-align: left;
 }
 
 p,.p{
