--- a/_includes/nextblogpost.html
+++ b/_includes/nextblogpost.html
@@ -14,7 +14,7 @@
           <p class="text-align--center">{{page.previous.excerpt}}</p>
       {% else if page.next.url %}
         <p class="h3 no-margin"><a href="{{page.next.url}}" title="Next Post:{{page.next.title}}">{{page.next.title}}</a></p>
-        <p class="text-align--center">{{page.next.excerpt}}</p>
+        <p>{{page.next.excerpt}}</p>
       {% endif %}
     </div>
   </article>
