--- a/_includes/nextblogpost.html
+++ b/_includes/nextblogpost.html
@@ -11,7 +11,7 @@
       <h6>Read this next</h6>
       {% if page.previous.url %}
           <p class="h3 no-margin"><a href="{{page.previous.url}}" title="Previous Post: {{page.previous.title}}">{{page.previous.title}}</a></p>
-          <p class="text-align--center">{{page.previous.excerpt}}</p>
+          <p>{{page.previous.excerpt}}</p>
       {% else if page.next.url %}
         <p class="h3 no-margin"><a href="{{page.next.url}}" title="Next Post:{{page.next.title}}">{{page.next.title}}</a></p>
         <p>{{page.next.excerpt}}</p>
