--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,9 @@
 {% include header.html %}
-{{ content }}
+
+<main class="content">
+  <div class="container">
+    {{ content }}
+  </div><!-- .container -->
+</main><!-- .content -->
+
 {% include footer.html %}
