--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<body class=" ">
+<body class="{{ page.title | slugify }}">
 
 <header>
   <div class="container">
@@ -6,11 +6,14 @@
       {% include logo.svg %}
       <span class="slogan"><span>volker</span>otto</span>
     </a>
+
+    {% assign current = page.url | downcase | split: '/' %}
+
     <nav role="navigation">
       <ul>
-        <li><a href="{{ site.url }}" class="active">About</a></li>
+        <li><a href="{{ site.url }}" {% if current[1] == '/' %}class="active"{% endif %}>About</a></li>
         <!-- <li><a href="{{ site.url }}/work">Work</a></li> -->
-        <li><a href="{{ site.url }}/blog">Blog</a></li>
+        <li><a href="{{ site.url }}/blog" {% if current[1] == 'blog' %}class="active"{% endif %}>Blog</a></li>
         <li><a href="mailto:{{ site.me.email }}">Contact</a></li>
       </ul>
 
