fixed some layout issues

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,6 @@
 {% include header.html %}
 
-<main class="content">
+<main class="content no-intro">
   <div class="container">
     {{ content }}
   </div><!-- .container -->
