--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,19 @@
 {% include header.html %}
 
-<main class="content no-intro">
+<div class="intro">
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <h1>{{ page.title }}</h1>
+        <p class="lead">
+          {{ page.excerpt }}
+        </p>
+      </div><!-- .col -->
+    </div><!-- .row -->
+  </div><!--.container-->
+</div><!--.intro-->
+
+<main class="content">
   <div class="container">
     {{ content }}
   </div><!-- .container -->
