--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,10 +11,6 @@
     <link rel="canonical" href="{{ site.url }}{{ page.url | remove:'index.html'}}" />
     <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
 
-    <!-- TYPEKIT -->
-    <script src="//use.typekit.net/fzu8znl.js"></script>
-    <script>try{Typekit.load();}catch(e){}</script>
-
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -29,13 +25,13 @@
 
   - Volker
 
-                          oooo  oooo                                              .       .
-                        `888  `888                                            .o8     .o8
-  oooo    ooo  .ooooo.   888   888  oooo   .ooooo.  oooo d8b       .ooooo.  .o888oo .o888oo  .ooooo.
-   `88.  .8'  d88' `88b  888   888 .8P'   d88' `88b `888""8P      d88' `88b   888     888   d88' `88b
-    `88..8'   888   888  888   888888.    888ooo888  888          888   888   888     888   888   888
-     `888'    888   888  888   888 `88b.  888    .o  888          888   888   888 .   888 . 888   888
-      `8'     `Y8bod8P' o888o o888o o888o `Y8bod8P' d888b         `Y8bod8P'   "888"   "888" `Y8bod8P'
+                          oooo  oooo
+                        `888  `888
+  oooo    ooo  .ooooo.   888   888  oooo   .ooooo.  oooo d8b
+   `88.  .8'  d88' `88b  888   888 .8P'   d88' `88b `888""8P
+    `88..8'   888   888  888   888888.    888ooo888  888
+     `888'    888   888  888   888 `88b.  888    .o  888
+      `8'     `Y8bod8P' o888o o888o o888o `Y8bod8P' d888b
 
   -->
 
