--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -15,7 +15,9 @@
 
 <main class="content">
   <div class="container">
-    {{ content }}
+    <div class="fullBox">
+      {{ content }}
+    </div><!-- .fullBox -->
   </div><!-- .container -->
 </main><!-- .content -->
 
