--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,6 +11,8 @@
     <link rel="canonical" href="{{ site.url }}{{ page.url | remove:'index.html'}}" />
     <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
 
+    <link rel="shortcut icon" href="{{ site.url }}/favicon.ico"/>
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
