--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,6 +27,8 @@
 
   - Volker
 
+  Here enjoy this fancy ascii art:
+
                           oooo  oooo
                         `888  `888
   oooo    ooo  .ooooo.   888   888  oooo   .ooooo.  oooo d8b
