--- a/assets/scss/basic/_html.scss
+++ b/assets/scss/basic/_html.scss
@@ -10,7 +10,7 @@ html{
   box-sizing: inherit;
 }
 body{
-  color: $grey;//#333;
+  color: $grey;
   background: white;
   font-family: 'proxima-nova','Helvetica Neue',Helvetica,Arial,sans-serif;
   text-rendering: optimizeLegibility;
