--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -4,9 +4,9 @@
  * @Author Volker Otto <hello@volkerotto.net>
  * @Year 2014
  */
+//@import url(//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css);
 
 @import 'vendor/normalize';
-@import url(//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css);
 
 @import 'basic/vars';
 @import 'basic/html';
