added estimated reading time

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,12 @@
+{% if site.readtime %}
+  {% for post in site.posts %}
+    {% if site.wpm %}
+      {% assign readtime = post.content | strip_html | number_of_words | append: '.0' | divided_by:site.wpm %}
+    {% else %}
+      {% assign readtime = post.content | strip_html | number_of_words | append: '.0' | divided_by:180 %}
+    {% endif %}
+  {% endfor %}
+{% endif %}
 <!doctype html>
 <html lang="en">
   <head>
