--- a/assets/scss/basic/_content.scss
+++ b/assets/scss/basic/_content.scss
@@ -27,8 +27,10 @@
   z-index: 1;
   background: white;
 
-  .container{
-    max-width: 900px;
+  &.content--blog{
+    .container{
+      max-width: 900px;
+    }
   }
 }
 
