--- a/assets/scss/basic/_content.scss
+++ b/assets/scss/basic/_content.scss
@@ -232,7 +232,7 @@
     li{
       display: inline-block;
     }
-    a,span{
+    a,div{
       display: inline-block;
       color: $grey;
       margin: 0 .1em 1rem 0;
