--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,8 +23,9 @@
       <div class="container">
         <ul>
           <li><a href="{{ site.url }}/blog" class="backToBlog">Back to overview</a></li>
-          <li><span itemprop="datePublished" datetime="{{ page.date }}">{{ page.date | date_to_string }}</span></li>
+          <li><div itemprop="datePublished" datetime="{{ page.date }}">{{ page.date | date_to_string }}</div></li>
           <li>
+            <div>
             {% if site.readtime %}
               {% if readtime > 60 %}
               {% assign readtime_hours = readtime | divided_by: 60 %}
@@ -35,6 +36,7 @@
               {% else %}
                 {% if readtime < 1 %}Less than 1 minute {% elsif readtime > 1 and readtime < 1.5 %}1 minute {% elsif readtime > 1.5 %}<span class="time">{{ readtime }}</span> minutes {% endif %}{% endif %} read
             {% endif %}
+              </div>
           </li>
         </ul>
       </div><!-- .container -->
